--- a/.github/workflows/cmake_cross_platform_build.yml
+++ b/.github/workflows/cmake_cross_platform_build.yml
@@ -444,19 +444,107 @@ jobs:
           Write-Host "NSIS availability check failed"
         }
         
+        # Check if WiX is available before trying to use it
+        $wixAvailable = $false
+        try {
+          # Check for WiX tools (candle.exe and light.exe)
+          $candleCmd = Get-Command candle -ErrorAction SilentlyContinue
+          $lightCmd = Get-Command light -ErrorAction SilentlyContinue
+          if ($candleCmd -and $lightCmd) {
+            Write-Host "WiX available in PATH - candle: $($candleCmd.Source), light: $($lightCmd.Source)"
+            $wixAvailable = $true
+          } else {
+            Write-Host "WiX not found in PATH, checking common installation locations..."
+            $wixPaths = @(
+              "${env:ProgramFiles}\WiX Toolset v3.11\bin",
+              "${env:ProgramFiles(x86)}\WiX Toolset v3.11\bin",
+              "${env:ProgramFiles}\Windows Installer XML v3.5\bin",
+              "${env:ProgramFiles(x86)}\Windows Installer XML v3.5\bin"
+            )
+            
+            foreach ($wixPath in $wixPaths) {
+              $candlePath = Join-Path $wixPath "candle.exe"
+              $lightPath = Join-Path $wixPath "light.exe"
+              if ((Test-Path $candlePath) -and (Test-Path $lightPath)) {
+                Write-Host "WiX found at: $wixPath"
+                $env:Path += ";$wixPath"
+                $wixAvailable = $true
+                break
+              }
+            }
+          }
+        } catch {
+          Write-Host "WiX availability check failed"
+        }
+        
+        if (-not $wixAvailable) {
+          Write-Host "Installing WiX Toolset via chocolatey..."
+          try {
+            choco install wixtoolset -y
+            # Refresh PATH
+            $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
+            
+            # Check again after installation
+            $candleCmd = Get-Command candle -ErrorAction SilentlyContinue
+            if ($candleCmd) {
+              Write-Host "WiX installed successfully"
+              $wixAvailable = $true
+            }
+          } catch {
+            Write-Host "Failed to install WiX Toolset: $($_.Exception.Message)"
+          }
+        }
+        
         # Try different package generators for Windows
         Write-Host "Attempting ZIP package creation..."
-        try { cpack -G ZIP . } catch { Write-Host "ZIP package creation failed or not configured" }
+        try { 
+          cpack -G ZIP . 
+          if ($LASTEXITCODE -eq 0) {
+            Write-Host "ZIP package creation succeeded"
+          } else {
+            Write-Host "ZIP package creation failed with exit code: $LASTEXITCODE"
+          }
+        } catch { 
+          Write-Host "ZIP package creation failed or not configured: $($_.Exception.Message)" 
+        }
         
         if ($nsisAvailable) {
           Write-Host "Attempting NSIS package creation..."
-          try { cpack -G NSIS . } catch { Write-Host "NSIS package creation failed or not configured" }
+          try { 
+            cpack -G NSIS . 
+            if ($LASTEXITCODE -eq 0) {
+              Write-Host "NSIS package creation succeeded"
+            } else {
+              Write-Host "NSIS package creation failed with exit code: $LASTEXITCODE"
+            }
+          } catch { 
+            Write-Host "NSIS package creation failed or not configured: $($_.Exception.Message)" 
+          }
         } else {
           Write-Host "Skipping NSIS package creation - NSIS not available"
         }
         
-        Write-Host "Attempting WIX package creation..."
-        try { cpack -G WIX . } catch { Write-Host "WIX package creation failed or not configured" }
+        if ($wixAvailable) {
+          Write-Host "Attempting WIX package creation..."
+          try { 
+            cpack -G WIX . 
+            if ($LASTEXITCODE -eq 0) {
+              Write-Host "WIX package creation succeeded"
+            } else {
+              Write-Host "WIX package creation failed with exit code: $LASTEXITCODE"
+              # Show WiX log file if it exists
+              $wixLogPath = "_CPack_Packages/win64/WIX/wix.log"
+              if (Test-Path $wixLogPath) {
+                Write-Host "WiX log file contents:"
+                Get-Content $wixLogPath | Select-Object -Last 20 | ForEach-Object { Write-Host $_ }
+              }
+            }
+          } catch { 
+            Write-Host "WIX package creation failed or not configured: $($_.Exception.Message)" 
+          }
+        } else {
+          Write-Host "Skipping WIX package creation - WiX Toolset not available"
+        }
         
         Write-Host "Generated packages:"
         Get-ChildItem -Filter "*.exe", "*.msi", "*.zip" -ErrorAction SilentlyContinue | Format-Table Name, Length -AutoSize
