Fixed library search on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -246,7 +246,7 @@ find_package(OpenSSL REQUIRED)
 
 # Expat C library
 if(WIN32)
-find_package(EXPAT REQUIRED)
+find_package(expat CONFIG REQUIRED)
 else()
 include (FindEXPAT)
 find_package(EXPAT REQUIRED)
